# example-token-bridge-relayer

./: DESIGN.md  README.md
cfg/: mainnetDeploymentConfig.json.sample  (+2 more)
docs/: DESIGN.md  (+1 more)
solana/programs/token_bridge_relayer/: Cargo.toml
solana/programs/token_bridge_relayer/src/: constants.rs  context.rs  error.rs  lib.rs  message.rs  utils.rs
solana/programs/token_bridge_relayer/src/experimental/: mod.rs  wrap_and_transfer.rs
solana/programs/token_bridge_relayer/src/processor/: complete_native_transfer_with_relay.rs  complete_wrapped_transfer_with_relay.rs  deregister_token.rs  initialize.rs  mod.rs  ownership.rs  register_token.rs  set_pause_for_transfers.rs  transfer_native_tokens_with_relay.rs  transfer_wrapped_tokens_with_relay.rs  update_max_native_swap_amount.rs  update_precision.rs  update_relayer_fee.rs  update_swap_rate.rs
solana/programs/token_bridge_relayer/src/processor/admin/: deregister_token.rs  initialize.rs  mod.rs  ownership.rs  register_foreign_contract.rs  register_token.rs  set_pause_for_transfers.rs  update_fee_recipient.rs  update_max_native_swap_amount.rs  update_precision.rs  update_relayer_fee.rs  update_swap_rate.rs
solana/programs/token_bridge_relayer/src/processor/complete_transfer_with_relay/: mod.rs  native.rs  wrapped.rs
solana/programs/token_bridge_relayer/src/processor/transfer_tokens_with_relay/: mod.rs  native.rs  wrapped.rs
solana/programs/token_bridge_relayer/src/state/: foreign_contract.rs  mod.rs  owner_config.rs  redeemer_config.rs  registered_token.rs  relayer_fee.rs  sender_config.rs  signer_sequence.rs
(+242 files in other folders)
