[package]
name = "token-bridge-relayer"
version = "0.1.0"
description = "Token Bridge Relayer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge_relayer"

[features]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
wormhole-anchor-sdk = { path = "../../modules/wormhole-anchor-sdk", features = ["token-bridge"]}
solana-program = "=1.14.16"
